# schnuffel

./: Cargo.toml  deny.toml  flake.nix
src/: graph.rs  lib.rs  main.rs  plugin.rs  types.rs
src/views/: graph.rs  mod.rs
src/views/graph/: constants.rs  helpers.rs  mod.rs
