[package]
name = "schnuffel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"

[dependencies]
schnuffel-types = {git = "https://github.com/miampf/schnuffel-types"}
extism = "1.0.0"
