[package]
name = "schnuffel"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"

[dependencies]
schnuffel-types = {git = "https://github.com/miampf/schnuffel-types"}
petgraph = {version = "0.6.5", features = ["rayon"]}
extism = "1.0.0"
iced = { version = "0.12.1", features = ["canvas", "advanced"] }
iced_renderer = "0.12.1"
iced_style = "0.12.1"
